set(ARTK_AR_UTILS_SRCS
./profile.c
./thread_sub.c
)

set(ARTK_AR_UTILS_HEADERS
${ARTK_INCLUDE_DIR}/profile.h
${ARTK_INCLUDE_DIR}/thread_sub.h
)

add_library(ARUtil ${ARTK_AR_UTILS_SRCS} ${ARTK_AR_UTILS_HEADERS})
include_directories( ${ARTK_INCLUDE_DIR} )

install(TARGETS ARUtil
	RUNTIME DESTINATION bin COMPONENT main # Install the dll file in bin directory
	LIBRARY DESTINATION lib PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE COMPONENT main
	ARCHIVE DESTINATION lib COMPONENT main) # Install the dll.a file in lib directory

install(FILES ${ARTK_AR_UTILS_HEADERS}
	DESTINATION include/${PROJECT_NAME}
	COMPONENT main)
